# DevSecOps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
src/: main.py
src/configurations/: configuration.py
src/constants/: __init__.py  directories.py
src/database/: connection.py
src/database/models/: __init__.py  permission.py  role.py  user.py
src/enums/: __init__.py  language.py  message.py  permission.py
src/errors/: __init__.py  user.py
src/locales/en/LC_MESSAGES/: messages.po
src/locales/es/LC_MESSAGES/: messages.po
src/repositories/: __init__.py  user_repository.py
src/routes/: __init__.py  auth_http.py  user_http.py
src/routes/dependencies/: __init__.py  dependencies.py
src/schemas/: __init__.py  auth.py  user.py
src/services/: __init__.py  auth_service.py  user_service.py
src/utils/: __init__.py  language.py  security.py
